# Copyright 2023 Google LLC
# SPDX-License-Identifier: MIT

option(
  'clspv-path',
  type: 'string',
  value: 'clspv',
  description: 'Path to clspv',
)

option(
  'skia-path',
  type: 'string',
  value: 'skia',
  description: 'Path to skia',
)

option(
  'spirv-reflect-path',
  type: 'string',
  value: 'SPIRV-Reflect',
  description: 'Path to SPIRV-Reflect',
)
